syntax = "proto3";

package user_v1;

option go_package = "github.com/UnicoYal/go-auth-chat/pkg/user/user_v1;user_v1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service UserV1 {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (google.protobuf.Empty);
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);
}

enum UserRoles {
  admin = 0;
  user = 1;
}

message User {
  UserInfo user_info = 1;
  string password = 2;
  string password_confirm = 3;
}

message UserInfo {
  int64 id = 1;
  string email = 2;
  string name = 3;
  UserRoles role = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message CreateUserRequest {
  string email = 1;
  string name = 2;
  string password = 3;
  string password_confirm = 4;
  UserRoles role = 5;
}

message CreateUserResponse {
  int64 id = 1;
}

message GetUserRequest {
  int64 id = 1;
}

message GetUserResponse {
  UserInfo user_info = 1;
}

message UpdateUserRequest {
  int64 id = 1;
  google.protobuf.StringValue email = 2;
  google.protobuf.StringValue name = 3;
}

message DeleteUserRequest {
  int64 id = 1;
}
